TRICE_PROTECT test added

--- a/examples/F030R8_inst/Makefile
+++ b/examples/F030R8_inst/Makefile
@@ -49,6 +49,7 @@ Core/Src/system_stm32f0xx.c \
 Core/Src/syscalls.c \
 Core/Src/sysmem.c
 
+# trice lib
 C_SOURCES += \
 ../../src/cobsDecode.c \
 ../../src/cobsEncode.c \
@@ -68,7 +69,10 @@ C_SOURCES += \
 ../../src/triceStaticBuffer.c \
 ../../src/xtea.c 
 
-C_SOURCES += ../../test/testdata/triceCheck.c
+# examples
+C_SOURCES += \
+../../test/testdata/triceCheck.c \
+../exampleData/triceLogDiagnosticData.c
 
 # ASM sources
 ASM_SOURCES =  \
