examples doc improved

--- a/examples/F030R8_inst/Makefile
+++ b/examples/F030R8_inst/Makefile
@@ -13,7 +13,7 @@
 ######################################
 # target
 ######################################
-TARGET = vsCode_NucleoF030R8_instrumented
+TARGET = F030R8
 
 
 ######################################
