small encryption bugfix

--- a/examples/F030R8_inst/.vscode/launch.json
+++ b/examples/F030R8_inst/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "name": "Cortex Debug",
             "cwd": "${workspaceFolder}",
-            "executable": "./out/vsCode_NucleoF030R8_instrumented.elf",
+            "executable": "./out/F030R8.elf",
             "request": "launch",
             "type": "cortex-debug",
             "runToEntryPoint": "main",
