--- a/examples/F030R8_inst/Makefile
+++ b/examples/F030R8_inst/Makefile
@@ -163,6 +163,7 @@ endif
 # Generate dependency information
 CFLAGS += -MMD -MP -MF"$(@:%.o=%.d)"
 
+#CFLAGS += -Wunused-parameter
 
 #######################################
 # LDFLAGS
