--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -424,7 +424,11 @@
                      "-p",
                      "com4",
                      "-baud",
-                     "115200"
+                     "115200",
+                     "-pw",
+                     "MySecret",
+                     "-pf",
+                     "cobs"
             ]
         },        
         {
