--- a/.github/FOUNDING.yml
+++ b/.github/FOUNDING.yml
@@ -2,3 +2,4 @@
 
 github: rokath
 buy_me_a_coffee: rokath
+custom: ["https://paypal.me/rolfkarlthomas?country.x=DE&locale.x=de_DE", github.com/rokath/trice/]
