--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,4 +2,4 @@
 
 github: [rokath]
 buy_me_a_coffee: rokath
-custom: ["https://paypal.me/rolfkarlthomas?country.x=DE&locale.x=de_DE", github.com/rokath/trice/]
+custom: ["https://paypal.me/rolfkarlthomas?country.x=DE&locale.x=de_DE"]
