--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,5 @@
 # help: https://blog.warengonzaga.com/how-to-enable-buy-me-a-coffee-to-your-open-source-project-on-github
 
-github: [rokath]
+github: rokath
 buy_me_a_coffee: rokath
 custom: ["https://paypal.me/rolfkarlthomas?country.x=DE&locale.x=de_DE"]
