--- a/.gitattributes
+++ b/.gitattributes
@@ -10,6 +10,8 @@
 *.PNG binary
 *.jpg binary
 *.gif binary
+*.svg binary # This is a text file format but because we don't want to see text diff on a file which is basically an image.
+*.SVG binary
 
 # Source: https://medium.com/@mbrehin/git-advanced-diff-odt-pdf-doc-xls-ppt-25afbf4f1105
 *.doc diff=doc
