--- a/.editorconfig
+++ b/.editorconfig
@@ -6,7 +6,7 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 
 [*.{c,h,cpp,hpp}]
-indent_style = space
+indent_style = tab
 indent_size = 4
 
 [*.{go}]
