rlcp added to .goreleaser.yaml

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -58,6 +58,8 @@ builds:
       - CGO_ENABLED=0
 archives:
   - 
+    rlcp: true
+
     #- format: tar.gz
     # this name template makes the OS and Arch compatible with the results of uname.
     #name_template: >-
