--- a/.clang-format-ignore
+++ b/.clang-format-ignore
@@ -2,3 +2,11 @@ src/SEGGER_RTT.c
 src/SEGGER_RTT.h
 src/trice.h
 src/trice.c
+src/trice8.h
+src/trice8.c
+src/trice16.h
+src/trice16.c
+src/trice32.h
+src/trice32.c
+src/trice64.h
+src/trice64.c
