try add labeler.yml file

--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -6,14 +6,15 @@
 # https://github.com/actions/labeler
 
 name: Labeler
-on: [pull_request, workflow_dispatch]
+on: [pull_request_target, workflow_dispatch]
 
 jobs:
-  label:
-
+  labeler:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
-    - uses: actions/labeler@v2
+    - uses: actions/labeler@v5
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
