.goreleaser.yaml adapted to goreleaser version 2

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,3 +1,5 @@
+version: 2
+
 # This is an example .goreleaser.yaml file with some sensible defaults.
 # Make sure to check the documentation at https://goreleaser.com
 before:
@@ -58,7 +60,7 @@ builds:
       - CGO_ENABLED=0
 archives:
   - 
-    rlcp: true
+    #rlcp: true
 
     #- format: tar.gz
     # this name template makes the OS and Arch compatible with the results of uname.
