CLI switch TRICE_OFF=1 added, MacOS support addded, gcc as default

--- a/examples/F030R8_inst/Makefile
+++ b/examples/F030R8_inst/Makefile
@@ -134,7 +134,8 @@ C_DEFS =  \
 -DPREFETCH_ENABLE=1 \
 -DINSTRUCTION_CACHE_ENABLE=0 \
 -DDATA_CACHE_ENABLE=0 \
--DSTM32F030x8
+-DSTM32F030x8 \
+$(TRICE_FLAGS)
 
 
 # AS includes
