--- a/examples/G0B1_gen/Makefile
+++ b/examples/G0B1_gen/Makefile
@@ -109,7 +109,7 @@ include flags.mak
 .PHONY: all gcc clean
 .SECONDARY: main-build
 
-all: clang
+all: gcc # clang
 
 clang: $(CLANG_BUILD)/$(TARGET).elf $(CLANG_BUILD)/$(TARGET).hex $(CLANG_BUILD)/$(TARGET).bin
 	@:
