--- a/examples/G0B1_inst/Makefile
+++ b/examples/G0B1_inst/Makefile
@@ -123,7 +123,8 @@ AS_DEFS =
 C_DEFS =  \
 -DUSE_FULL_LL_DRIVER \
 -DSTM32G0B1xx \
--DUSE_HAL_DRIVER
+-DUSE_HAL_DRIVER \
+$(TRICE_FLAGS)
 
 
 # AS includes
