--- a/examples/OpenCM3_STM32F411_Nucleo/Makefile
+++ b/examples/OpenCM3_STM32F411_Nucleo/Makefile
@@ -9,10 +9,10 @@ C_FLAGS+=-DSTM32F4 -I/home/kraiskil/stuff/libopencm3/include
 # These two are for trice.h and triceConfig.h
 C_FLAGS+=-I../../pkg/src/ -I.
 
-LDFLAGS=-L${OPENCM3_DIR}/lib -lopencm3_stm32f4 -lm -Wl,--start-group -lc -lgcc -lnosys -Wl,--end-group
-LDFLAGS+=-T nucleo-f411re.ld
-LDFLAGS+=--static -nostartfiles
-LDFLAGS+=-Wl,-Map=memorymap.txt
+LFLAGS=-L${OPENCM3_DIR}/lib -lopencm3_stm32f4 -lm -Wl,--start-group -lc -lgcc -lnosys -Wl,--end-group
+LFLAGS+=-T nucleo-f411re.ld
+LFLAGS+=--static -nostartfiles
+LFLAGS+=-Wl,-Map=memorymap.txt
 
 all: direct_mode.elf irq_mode.elf
 .PHONY: flash clean
@@ -33,13 +33,13 @@ til.json:
 	touch til.json
 
 direct_mode.elf: main.trice.c ../../pkg/src/trice.c
-	${CC} ${C_FLAGS} $^ -o $@ ${LDFLAGS} -DTRICE_MODE=0
+	${CC} ${C_FLAGS} $^ -o $@ ${LFLAGS} -DTRICE_MODE=0
 
 flash_direct_mode: direct_mode.elf
 	openocd -f interface/stlink-v2.cfg -f target/stm32f4x.cfg -c "program direct_mode.elf verify reset exit"
 
 irq_mode.elf: main.trice.c ../../pkg/src/trice.c
-	${CC} ${C_FLAGS} $^ -o $@ ${LDFLAGS} -DTRICE_MODE=200
+	${CC} ${C_FLAGS} $^ -o $@ ${LFLAGS} -DTRICE_MODE=200
 
 flash_irq_mode: irq_mode.elf
 	openocd -f interface/stlink-v2.cfg -f target/stm32f4x.cfg -c "program irq_mode.elf verify reset exit"
