--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,12 @@
 **/out/
 **/out.gcc/
 **/out.clang/
-
+**/.DS_Store/
 **/temp/
 
 # files
 **/gccLinksClangWarning.txt
 **/.mxproject
-
 internal/receiver/trices.raw
 
-.DS_Store
+
