RTT support with open-ocd for Darwin added

--- a/examples/G0B1_inst/openocd.cfg
+++ b/examples/G0B1_inst/openocd.cfg
@@ -1,18 +1,15 @@
 
+# Not using the board/st_nucleo_g0x.cfg here, because the NUCLEO-G0B1RE is reflashed with the JLINK on-board debugger.
 source [find interface/jlink.cfg]
-#adapter speed 4000
 transport select swd
 source [find target/stm32g0x.cfg]
 reset_config srst_only
-
-											#help
-											#resume
-# rtt setup 0x20000000 2048 "SEGGER RTT"
-# init
-# rtt start
-# rtt server start 9090 0
-# rtt polling_interval
-# rtt channels
+rtt setup 0x20000000 0x2000 "SEGGER RTT"
+init
+rtt start
+rtt server start 9090 0
+#rtt polling_interval (shows 100ms)
+rtt channels
 
 
 
