--- a/examples/L432KC_gen_ad_toClang_ed_inst/openocd.cfg
+++ b/examples/L432KC_gen_ad_toClang_ed_inst/openocd.cfg
@@ -1,9 +1,13 @@
 
-# Not using the board/st_nucleo_l4x.cfg here, because the NUCLEO-L432KC is reflashed with the JLINK on-board debugger.
+# Not using the board/st_nucleo_l4.cfg here, because the NUCLEO-L432KC is reflashed with the JLINK on-board debugger.
 source [find interface/jlink.cfg]
 transport select swd
 source [find target/stm32l4x.cfg]
+#adapter speed 2000
 reset_config srst_only
+
+#program out.gcc/L432KC.elf verify reset exit
+
 rtt setup 0x20000000 0x2000 "SEGGER RTT"
 init
 rtt start
