--- a/examples/L432KC_gen_ad_toClang_ed_inst/JLinkOpenOCD.cfg
+++ b/examples/L432KC_gen_ad_toClang_ed_inst/JLinkOpenOCD.cfg
@@ -1,5 +1,5 @@
 
-# Not using the board/st_nucleo_l4x.cfg here, because the NUCLEO-L432KC is reflashed with the JLINK on-board debugger.
+# Not using the board/st_nucleo_l4.cfg here, because the NUCLEO-L432KC is reflashed with the JLINK on-board debugger.
 source [find interface/jlink.cfg]
 transport select swd
 source [find target/stm32l4x.cfg]
