Markdown doc files formatting improved

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,8 @@
         "NUCLEO",
         "Strg",
         "tcobs",
-        "TREX"
+        "TREX",
+        "vscode"
     ],
     "C_Cpp.errorSquiggles": "Disabled",
     "cmake.configureOnOpen": false,
