--- a/examples/F030_bare/Makefile
+++ b/examples/F030_bare/Makefile
@@ -13,7 +13,7 @@
 ######################################
 # target
 ######################################
-TARGET = vsCode_NucleoF030R8_generated
+TARGET = F030_bare
 
 
 ######################################
