config speed examples added to user manual

--- a/examples/F030_inst/.vscode/launch.json
+++ b/examples/F030_inst/.vscode/launch.json
@@ -13,8 +13,7 @@
             "runToEntryPoint": "main",
             "servertype": "jlink",
             "device": "STM32F030R8",
-            "svdFile": "./STM32F030R8.svd",
-            "runToMain": true
+            "svdFile": "./STM32F030R8.svd"
         }
     ]
 }
