--- a/examples/F030_inst/Makefile
+++ b/examples/F030_inst/Makefile
@@ -150,7 +150,9 @@ C_INCLUDES =  \
 -IDrivers/CMSIS/Include
 
 C_INCLUDES += \
--I../../src
+-I../../src \
+-I../exampleData\triceLogDiagData.c \
+-I../exampleData\triceExamples.c
 
 # compile gcc flags
 ASFLAGS = $(MCU) $(AS_DEFS) $(AS_INCLUDES) $(OPT) -Wall -fdata-sections -ffunction-sections
