--- a/examples/F030_bare/Makefile
+++ b/examples/F030_bare/Makefile
@@ -29,7 +29,7 @@ OPT = -Og
 # paths
 #######################################
 # Build path
-BUILD_DIR = build
+BUILD_DIR = out
 
 ######################################
 # source
